--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,200 +1,202 @@
-
 /* font Lato imported from Google Fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Lato:wght@300&display=swap');
 
 :root {
-    --primary-color: #808f85;
-    --dark-color: #595959;
-    --light-color: #f4f4f4;
-  }
+  --primary-color: #808f85;
+  --dark-color: #595959;
+  --light-color: #f4f4f4;
+}
 
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    font-family: 'lato',sans-serif;
-    color: #333;
-    line-height: 1.6;
+  font-family: 'lato', sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 
 }
 
 a {
-    text-decoration: none;
-    color: none;
+  text-decoration: none;
+  color: none;
 }
 
 h1,
 h2 {
-    font-weight: 300;
-    line-height: 1.2;
-    margin: 10px 0;
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 10px 0;
 }
 
 p {
-    /* tell the paragraph apart */
-    margin: 10px 0;
+  /* tell the paragraph apart */
+  margin: 10px 0;
 }
 
 img {
-    /* keep the img with the container */
-    width: 100%;
+  /* keep the img with the container */
+  width: 100%;
 }
 
 .navbar {
-    background-color: var(--primary-color);
-    color: #fff;
-    height: 70px;
+  background-color: var(--primary-color);
+  color: #fff;
+  height: 70px;
 }
 
 .navbar a:hover {
-    border-bottom: 2px #fff solid;
+  border-bottom: 2px #fff solid;
 }
 
 .navbar ul {
-    display: flex;
+  display: flex;
 
 }
 
 .navbar a {
-    color:#fff;
-    padding: 10px;
-    margin: 0 5px;
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
 
 }
 
 /*about me section*/
 
 .about-me {
-    height: 600px;
-    background-color: var(--primary-color);
-    color: #fff;
-    position: relative;
+  height: 600px;
+  background-color: var(--primary-color);
+  color: #fff;
+  position: relative;
 }
 
 
 .about-me-text {
-    animation: slideInFromLeft 1s ease-in;/*plz check animation below*/
+  animation: slideInFromLeft 1s ease-in;
+  /*plz check animation below*/
 }
 
 
 .about-me h1 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .about-me p {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .about-me-pic {
-    animation: slideInFromRight 1s ease-in;
+  animation: slideInFromRight 1s ease-in;
 }
 
 .myphoto {
-    border-radius: 10%;
-    
+  border-radius: 10%;
+
 }
 
 
 /* skills*/
 
 .skills .flex {
-    flex-wrap: wrap;
-    justify-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 
 .skills .card {
-    margin:18px 10px 40px;    
+  margin: 18px 10px 40px;
 }
 
 
 .svg {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 
 /* footer section */
 
 .fa-github {
-    color: white;
+  color: white;
 }
-  
+
 .fa-github:hover {
-    color: black;
+  color: black;
 }
 
 .fa-linkedin {
-    color: white;
+  color: white;
 }
-  
+
 .fa-linkedin:hover {
-    color: navy;
+  color: navy;
 }
 
 .fa-instagram {
-    color: white;
+  color: white;
 }
-  
+
 .fa-instagram:hover {
-    color: hotpink;
+  color: hotpink;
 }
-  
+
 
 /* work page */
-.introduction-text{
-    animation: slideInFromTop 1s ease-in;/*plz check animation below*/
+.introduction-text {
+  animation: slideInFromTop 1s ease-in;
+  /*plz check animation below*/
 }
 
 
 .project-img {
-    border-radius: 5%;
+  border-radius: 5%;
 }
 
 /* contact-page */
 
-.contact-me-text {    
-    animation-name: colorchange;/*plz check animation below*/
-    animation-duration: 4s;
+.contact-me-text {
+  animation-name: colorchange;
+  /*plz check animation below*/
+  animation-duration: 4s;
 }
 
-.contact {   
-    top: 60px;
-    height: 600px;
-    width: 300px;
-    padding: 0px;
-    animation: slideInFromLeft 1s ease-in;
+.contact {
+  top: 60px;
+  height: 600px;
+  width: 300px;
+  padding: 0px;
+  animation: slideInFromLeft 1s ease-in;
 }
 
-.contact-flex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.contact-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact input[type='email'] {
-    border: 0;
-    border-bottom: 1px solid var(--primary-color);
-    width: 100%;
-    padding: 3px;
-    font-size: 16px;
+  border: 0;
+  border-bottom: 1px solid var(--primary-color);
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
 }
 
 .contact textarea {
-    border: 0;
-    border-bottom: 1px solid var(--primary-color);
-    height: 200px;
-    width: 100%;
-    padding: 3px;
-    font-size: 16px;
+  border: 0;
+  border-bottom: 1px solid var(--primary-color);
+  height: 200px;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
 }
 
 
@@ -202,20 +204,20 @@ img {
 
 /* class will be used all around website */
 .container {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 40px;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 40px;
 
 }
 
 
 .card {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-    transition: transform 0.2s ease-in;
-}   
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+  transition: transform 0.2s ease-in;
+}
 
 
 .card:hover {
@@ -224,197 +226,201 @@ img {
 
 
 .btn {
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background: var(--primary-color);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background: var(--primary-color);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
 }
-  
+
 .btn-outline {
-    background-color: transparent;
-    border: 1px #fff solid;
+  background-color: transparent;
+  border: 1px #fff solid;
 }
-  
+
 
 .flex {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%
-
-} 
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%
+}
 
 .grid-3 {
-    grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
-  
+
 
 /* Animations */
 @keyframes slideInFromLeft {
-    0% {
-      transform: translateX(-100%);
-    }
-  
-    100% {
-      transform: translateX(0);
-    }
+  0% {
+    transform: translateX(-100%);
   }
 
-  @keyframes slideInFromTop {
-    0% {
-      transform: translateY(-100%);
-    }
-  
-    100% {
-      transform: translateX(0);
-    }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
   }
 
-  @keyframes slideInFromRight {
+  100% {
+    transform: translateX(0);
+  }
+}
 
-    0% {
-        transform: translateX(100%);
-    }
-      
-    100% {
-        transform: translateX(0);
-    }
+@keyframes slideInFromRight {
 
+  0% {
+    transform: translateX(100%);
   }
 
-  @keyframes colorchange {
-    from {color: lightgrey;}
-    to {color: darkgreen;}
+  100% {
+    transform: translateX(0);
   }
 
+}
+
+@keyframes colorchange {
+  from {
+    color: lightgrey;
+  }
+
+  to {
+    color: darkgreen;
+  }
+}
 
 
-/*______________________my "library"______________________________*/ 
+
+/*______________________my "library"______________________________*/
 /* in the following way I can use css like bootstrap, some of them are not used but still keep them here for future development*/
 /* commonly used text sizes */
-  .lead {
-    font-size: 20px;
-  }
-  
-  .sm {
-    font-size: 1rem;
-  }
-  
-  .md {
-    font-size: 2rem;
-  }
-  
-  .lg {
-    font-size: 3rem;
-  }
-  
-  .xl {
-    font-size: 4rem;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
+.lead {
+  font-size: 20px;
+}
 
-  .text-left {
-    text-align: left;
-  }
-  
-  /* commonly used margin */
-  .my-1 {
-    margin: 1rem 0;
-  }
-  
-  .my-2 {
-    margin: 1.5rem 0;
-  }
-  
-  .my-3 {
-    margin: 2rem 0;
-  }
-  
-  .my-4 {
-    margin: 3rem 0;
-  }
-  
-  .my-5 {
-    margin: 4rem 0;
-  }
-  
-  .m-1 {
-    margin: 1rem;
-  }
-  
-  .m-2 {
-    margin: 1.5rem;
-  }
-  
-  .m-3 {
-    margin: 2rem;
-  }
-  
-  .m-4 {
-    margin: 3rem;
-  }
-  
-  .m-5 {
-    margin: 4rem;
-  }
-  
-  /* commonly used padding */
-  .py-1 {
-    padding: 1rem 0;
-  }
-  
-  .py-2 {
-    padding: 1.5rem 0;
-  }
-  
-  .py-3 {
-    padding: 2rem 0;
-  }
-  
-  .py-4 {
-    padding: 3rem 0;
-  }
-  
-  .py-5 {
-    padding: 4rem 0;
-  }
-  
-  .p-1 {
-    padding: 1rem;
-  }
-  
-  .p-2 {
-    padding: 1.5rem;
-  }
-  
-  .p-3 {
-    padding: 2rem;
-  }
-  
-  .p-4 {
-    padding: 3rem;
-  }
-  
-  .p-5 {
-    padding: 4rem;
-  }
+.sm {
+  font-size: 1rem;
+}
 
-  /* back-ground color*/
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+/* commonly used margin */
+.my-1 {
+  margin: 1rem 0;
+}
+
+.my-2 {
+  margin: 1.5rem 0;
+}
+
+.my-3 {
+  margin: 2rem 0;
+}
+
+.my-4 {
+  margin: 3rem 0;
+}
+
+.my-5 {
+  margin: 4rem 0;
+}
+
+.m-1 {
+  margin: 1rem;
+}
+
+.m-2 {
+  margin: 1.5rem;
+}
+
+.m-3 {
+  margin: 2rem;
+}
+
+.m-4 {
+  margin: 3rem;
+}
+
+.m-5 {
+  margin: 4rem;
+}
+
+/* commonly used padding */
+.py-1 {
+  padding: 1rem 0;
+}
+
+.py-2 {
+  padding: 1.5rem 0;
+}
+
+.py-3 {
+  padding: 2rem 0;
+}
+
+.py-4 {
+  padding: 3rem 0;
+}
+
+.py-5 {
+  padding: 4rem 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 1.5rem;
+}
+
+.p-3 {
+  padding: 2rem;
+}
+
+.p-4 {
+  padding: 3rem;
+}
+
+.p-5 {
+  padding: 4rem;
+}
+
+/* back-ground color*/
 
 .bg-primary {
   background-color: var(--primary-color);
@@ -430,7 +436,8 @@ img {
   background-color: var(--light-color);
   color: #333;
 }
-/*________________________my "library"_____________________________*/ 
+
+/*________________________my "library"_____________________________*/
 
 
 
@@ -442,13 +449,14 @@ img {
 /* responsiveness */
 /* tablets */
 @media (max-width: 768px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-    }
-    .myphoto {
-      width: 300px;
-      height: 300px;
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .myphoto {
+    width: 300px;
+    height: 300px;
   }
 }
 
@@ -456,9 +464,9 @@ img {
 /* Mobile */
 
 @media (max-width: 500px) {
-    .container {
-        display: flex;
-        flex-direction: column;
-    }
- 
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
