--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,12 +57,14 @@ img {
   animation-iteration-count: infinite;
 }
 
-
+/* nav bar */
 
 .navbar {
   background-color: var(--primary-color);
   color: #fff;
   height: 70px;
+  position: fixed;
+  width: 100%;
 }
 
 .navbar a:hover {
@@ -81,10 +83,12 @@ img {
 
 }
 
+
+
 /*about me section*/
 
 .about-me {
-  height: 600px;
+  height: 660px;
   background-color: var(--primary-color);
   color: #fff;
   position: relative;
@@ -121,6 +125,10 @@ img {
 
 
 /* skills*/
+.eskills{
+  height: 600px;
+
+}
 
 .skills .flex {
   flex-wrap: wrap;
@@ -157,16 +165,13 @@ img {
   color: navy;
 }
 
-.fa-instagram {
-  color: white;
-}
-
-.fa-instagram:hover {
-  color: hotpink;
-}
 
 
 /* work page */
+.work{
+  height: 900px;
+}
+
 .introduction-text {
   animation: slideInFromTop 1s ease-in;
   /*plz check animation below*/
@@ -178,12 +183,6 @@ img {
 }
 
 /* contact-page */
-
-.contact-me-text {
-  animation-name: colorchange;
-  /*plz check animation below*/
-  animation-duration: 4s;
-}
 
 .contact {
   top: 60px;
@@ -235,11 +234,12 @@ img {
   margin: 10px;
   transition: transform 0.2s ease-in;
 }
-
+/* 
 
 .card:hover {
-  transform: translateY(-15px);
-}
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+} */
 
 
 .btn {
