--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,6 +63,7 @@ img {
   background-color: var(--primary-color);
   color: #fff;
   height: 70px;
+  position: fixed;
   width: 100%;
 }
 
@@ -87,10 +88,11 @@ img {
 /*about me section*/
 
 .about-me {
-  height: 660px;
+  height: 800px;
   background-color: var(--primary-color);
   color: #fff;
   position: relative;
+  width: 100%;
 }
 
 
@@ -126,7 +128,7 @@ img {
 /* skills*/
 .eskills{
   height: 600px;
-
+  width: 100%;
 }
 
 .skills .flex {
@@ -147,6 +149,10 @@ img {
 
 
 /* footer section */
+
+.footer {
+  width: 100%;
+}
 
 .fa-github {
   color: white;
@@ -169,6 +175,7 @@ img {
 /* work page */
 .work{
   height: 900px;
+  width: 100%;
 }
 
 .introduction-text {
@@ -195,6 +202,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .contact input[type='email'] {
@@ -481,6 +489,8 @@ img {
 
 /* responsiveness */
 /* tablets */
+
+/* 
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
@@ -491,12 +501,12 @@ img {
     width: 300px;
     height: 300px;
   }
-}
+} */
 
 
 /* Mobile */
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -508,4 +518,4 @@ img {
 
 
 
-}
+} */
