--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,7 +88,7 @@ img {
 /*about me section*/
 
 .about-me {
-  height: 800px;
+  height: auto;
   background-color: var(--primary-color);
   color: #fff;
   position: relative;
@@ -127,7 +127,7 @@ img {
 
 /* skills*/
 .eskills{
-  height: 600px;
+  height: auto;
   width: 100%;
 }
 
@@ -174,7 +174,7 @@ img {
 
 /* work page */
 .work{
-  height: 900px;
+  height: auto;
   width: 100%;
 }
 
@@ -192,7 +192,7 @@ img {
 
 .contact {
   top: 60px;
-  height: 600px;
+  height: auto;
   width: 300px;
   padding: 0px;
   animation: slideInFromLeft 1s ease-in;
