fix mobile layout

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -490,8 +490,8 @@ img {
 /* responsiveness */
 /* tablets */
 
-/* 
-@media (max-width: 768px) {
+
+/* @media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
