--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -491,7 +491,7 @@ img {
 /* tablets */
 
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
@@ -501,12 +501,12 @@ img {
     width: 300px;
     height: 300px;
   }
-} */
+}
 
 
 /* Mobile */
 
-/* @media (max-width: 500px) {
+@media (max-width: 500px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -518,4 +518,4 @@ img {
 
 
 
-} */
+}
