--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -109,7 +109,9 @@ img {
 
 .about-me p {
   margin: 20px 0;
+  text-align: justify;
 }
+
 
 .about-me-pic {
   animation: slideInFromRight 1s ease-in;
@@ -238,18 +240,19 @@ img {
 
 
 .card {
-  background-color: #fff;
+  background-color: transparent;
   border-radius: 10px;
-  padding: 20px;
+  padding: 0px;
   margin: 10px;
   transition: transform 0.2s ease-in;
+  display: grid;
+  grid-template-columns: 1fr;
 }
-/* 
+
 
 .card:hover {
-  animation: shake 1s;
-  animation-iteration-count: infinite;
-} */
+  animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
 
 
 .btn {
@@ -352,7 +355,16 @@ img {
 }
 
 
-
+@keyframes shadow-drop-center {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+  }
+}
 
 
 
