--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,7 @@
 
 :root {
   --primary-color: #808f85;
-  --dark-color: #595959;
+  --dark-color: #7e7e7d;
   --light-color: #f4f4f4;
 }
 
@@ -330,7 +330,7 @@ img {
 
 }
 
-@keyframes colorchange {
+/* @keyframes colorchange {
   from {
     color: lightgrey;
   }
@@ -338,7 +338,7 @@ img {
   to {
     color: darkgreen;
   }
-}
+} */
 
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
