--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -250,10 +250,6 @@ img {
 }
 
 
-.card:hover {
-  animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
 
 .btn {
   display: inline-block;
@@ -273,6 +269,21 @@ img {
 .btn-outline {
   background-color: transparent;
   border: 1px #fff solid;
+}
+
+.btn-small {
+  display: inline-block;
+  padding: 5px 15px;
+  cursor: pointer;
+  background: var(--light-color);
+  color: var(--dark-color);
+  border: none;
+  border-radius: 15px;
+}
+
+.btn-small:hover {
+  background: var(--dark-color);
+  color: var(--light-color);
 }
 
 
@@ -355,16 +366,6 @@ img {
 }
 
 
-@keyframes shadow-drop-center {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-  }
-}
 
 
 
