--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -259,8 +259,13 @@ img {
   cursor: pointer;
   background: var(--primary-color);
   color: #fff;
-  border: none;
+  border: 1px #fff;
   border-radius: 5px;
+}
+
+.btn-outline{
+  background-color: transparent;
+  border: 1px var(--light-color) solid;
 }
 
 .btn:hover {
