--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -172,20 +172,14 @@ img {
 
 .chip {
   display: inline-block;
-  padding: 0 20px;
+  padding: 5px 15px;
   height: 25px;
-  font-size: 10px;
-  line-height: 25px;
+  line-height: 15px;
   border-radius: 15px;
   background-color: var(--primary-color);
+  border: 1px;
 }
 
-.chip img {
-  float: left;
-  margin: 0 10px 0 -5px;
-  height: 25px;
-  width: 25px;
-}
 
 
 
